--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.1",
     "mongodb": "^5.1.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^27.4.5"
