--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/geshan/expressjs-structure#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
